#
#  Makefile for the Squid LDAP authentication helper
#
#  $Id: Makefile.am,v 1.3 2005/05/17 16:56:31 hno Exp $
#
#  Uncomment and customize the following to suit your needs:
#

libexec_PROGRAMS 	= squid_unix_group
man_MANS 		= squid_unix_group.8
EXTRA_DIST		= squid_unix_group.8
squid_unix_group_SOURCES	= check_group.c
